--- a/src/main/resources/com/project/hello-view.fxml
+++ b/src/main/resources/com/project/hello-view.fxml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.project.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-
-    <Label fx:id="welcomeText" />
-    <Button onAction="#playMusic" text="Hello!" />
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.HelloController">
+   <children>
+      <ButtonBar layoutX="465.0" layoutY="642.0" prefHeight="40.0" prefWidth="200.0">
+        <buttons>
+          <Button mnemonicParsing="false" text="Back" />
+            <Button mnemonicParsing="false" onAction="#playMusic" text="Play" />
+            <Button mnemonicParsing="false" onAction="#pauseMusic" text="Pause" />
+            <Button mnemonicParsing="false" onAction="#nextTrack" text="Next" />
+        </buttons>
+      </ButtonBar>
+      <Text layoutX="298.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Now Playing:">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Text>
+      <Text layoutX="472.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="377.4970703125">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
