--- a/src/main/resources/com/project/hello-view.fxml
+++ b/src/main/resources/com/project/hello-view.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,7 +20,7 @@
             <Font size="29.0" />
          </font>
       </Text>
-      <Text layoutX="472.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="377.4970703125">
+      <Text fx:id="nowPlaying" layoutX="472.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="377.4970703125">
          <font>
             <Font size="29.0" />
          </font>
