--- a/src/main/resources/com/project/hello-view.fxml
+++ b/src/main/resources/com/project/hello-view.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,11 +8,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.HelloController">
    <children>
-      <ButtonBar layoutX="465.0" layoutY="642.0" prefHeight="40.0" prefWidth="200.0">
+      <ButtonBar layoutX="508.0" layoutY="638.0" prefHeight="40.0" prefWidth="200.0">
         <buttons>
           <Button mnemonicParsing="false" onAction="#backTrack" text="Back" />
-            <Button mnemonicParsing="false" onAction="#playMusic" text="Play" />
-            <Button mnemonicParsing="false" onAction="#pauseMusic" text="Pause" />
+            <Button mnemonicParsing="false" onAction="#playMusic" text="Play/Pause" />
             <Button mnemonicParsing="false" onAction="#nextTrack" text="Next" />
         </buttons>
       </ButtonBar>
