--- a/src/main/resources/com/project/MusicPlayer.fxml
+++ b/src/main/resources/com/project/MusicPlayer.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.MainController">
    <children>
-      <ButtonBar layoutX="508.0" layoutY="638.0" prefHeight="40.0" prefWidth="200.0">
+      <ButtonBar layoutX="508.0" layoutY="638.0" prefHeight="40.0" prefWidth="346.0">
         <buttons>
-          <Button mnemonicParsing="false" onAction="#backTrack" text="Back" />
-            <Button mnemonicParsing="false" onAction="#playMusic" text="Play/Pause" />
+            <Button mnemonicParsing="false" onAction="#playMusic" prefHeight="30.0" text="Play/Pause" />
             <Button mnemonicParsing="false" onAction="#nextTrack" text="Next" />
+          <Button mnemonicParsing="false" onAction="#backTrack" text="Back" />
         </buttons>
       </ButtonBar>
       <Text layoutX="298.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Now Playing:">
@@ -25,5 +25,6 @@
             <Font size="29.0" />
          </font>
       </Text>
+      <Button layoutX="71.0" layoutY="48.0" mnemonicParsing="false" onAction="#addFolder" text="Add Folder" />
    </children>
 </AnchorPane>
