--- a/src/main/resources/com/project/MusicPlayer.fxml
+++ b/src/main/resources/com/project/MusicPlayer.fxml
@@ -2,17 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.MainController">
    <children>
-      <ButtonBar layoutX="508.0" layoutY="638.0" prefHeight="40.0" prefWidth="346.0">
+      <ButtonBar layoutX="495.0" layoutY="644.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="290.0">
         <buttons>
+          <Button mnemonicParsing="false" onAction="#backTrack" text="Back" />
             <Button mnemonicParsing="false" onAction="#playMusic" prefHeight="30.0" text="Play/Pause" />
             <Button mnemonicParsing="false" onAction="#nextTrack" text="Next" />
-          <Button mnemonicParsing="false" onAction="#backTrack" text="Back" />
         </buttons>
       </ButtonBar>
       <Text layoutX="298.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Now Playing:">
@@ -20,11 +22,16 @@
             <Font size="29.0" />
          </font>
       </Text>
-      <Text fx:id="nowPlaying" layoutX="472.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="377.4970703125">
+      <Text fx:id="nowPlaying" depthTest="ENABLE" layoutX="495.0" layoutY="542.0" nodeOrientation="LEFT_TO_RIGHT" pickOnBounds="true" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="523.0">
          <font>
             <Font size="29.0" />
          </font>
       </Text>
       <Button layoutX="71.0" layoutY="48.0" mnemonicParsing="false" onAction="#addFolder" text="Add Folder" />
+      <ScrollPane layoutX="8.0" layoutY="127.0" prefHeight="447.0" prefWidth="314.0">
+         <content>
+            <ListView fx:id="musicListDisplay" prefHeight="441.0" prefWidth="312.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
