--- a/src/main/resources/com/project/MusicPlayer.fxml
+++ b/src/main/resources/com/project/MusicPlayer.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -27,11 +28,26 @@
             <Font size="29.0" />
          </font>
       </Text>
-      <Button layoutX="71.0" layoutY="48.0" mnemonicParsing="false" onAction="#addFolder" text="Add Folder" />
+      <Button layoutX="14.0" layoutY="53.0" mnemonicParsing="false" onAction="#addFolder" text="Add Folder" />
       <ScrollPane layoutX="8.0" layoutY="127.0" prefHeight="447.0" prefWidth="314.0">
          <content>
             <ListView fx:id="musicListDisplay" prefHeight="441.0" prefWidth="312.0" />
          </content>
       </ScrollPane>
+      <ButtonBar layoutX="495.0" layoutY="66.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="314.0">
+         <buttons>
+            <Button mnemonicParsing="false" text="Delete Playlist" />
+            <Button mnemonicParsing="false" text="Create Playlist" />
+         </buttons>
+      </ButtonBar>
+      <ScrollPane layoutX="495.0" layoutY="127.0" prefHeight="447.0" prefWidth="314.0">
+         <content>
+            <ListView fx:id="playlistDisplay" prefHeight="441.0" prefWidth="312.0" />
+         </content>
+      </ScrollPane>
+      <Button layoutX="208.0" layoutY="86.0" mnemonicParsing="false" text="Remove Song" />
+      <Button layoutX="108.0" layoutY="86.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add Song" />
+      <Button layoutX="361.0" layoutY="127.0" mnemonicParsing="false" text="Add to playlist" />
+      <Slider fx:id="seekSlider" blockIncrement="1.0" layoutY="630.0" prefHeight="14.0" prefWidth="1280.0" />
    </children>
 </AnchorPane>
