--- a/src/main/resources/com/project/MusicPlayer.fxml
+++ b/src/main/resources/com/project/MusicPlayer.fxml
@@ -27,7 +27,7 @@
             <Image url="@../../assets/BLUEMAGENTA.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="435.0" fitWidth="192.0" layoutX="1058.0" layoutY="178.0" opacity="0.28" pickOnBounds="true">
+      <ImageView fitHeight="435.0" fitWidth="218.0" layoutX="1045.0" layoutY="178.0" opacity="0.28" pickOnBounds="true">
          <image>
             <Image url="@../../assets/darkteal.png" />
          </image>
@@ -61,7 +61,7 @@
             <Font name="Century Gothic" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="1085.0" layoutY="178.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Add to playlist" textFill="BEIGE">
+      <Button layoutX="1085.0" layoutY="178.0" mnemonicParsing="false" onAction="#addToPlaylist" style="-fx-background-color: transparent;" text="Add to playlist" textFill="BEIGE">
          <font>
             <Font size="18.0" />
          </font></Button>
@@ -96,12 +96,17 @@
                   <Font name="Century Gothic" size="15.0" />
                </font>
             </Button>
-            <Button layoutX="15.0" layoutY="40.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Create Playlist" textFill="BEIGE">
+            <Button layoutX="15.0" layoutY="40.0" mnemonicParsing="false" onAction="#createPlaylist" style="-fx-background-color: transparent;" text="Create Playlist" textFill="BEIGE">
                <font>
                   <Font name="Century Gothic" size="15.0" />
                </font>
             </Button>
             <Button layoutX="17.0" layoutY="69.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Delete Playlist" textFill="BEIGE">
+               <font>
+                  <Font name="Century Gothic" size="15.0" />
+               </font>
+            </Button>
+            <Button layoutX="157.0" layoutY="14.0" mnemonicParsing="false" onAction="#clearQueue" style="-fx-background-color: transparent;" text="Clear Queue" textFill="BEIGE">
                <font>
                   <Font name="Century Gothic" size="15.0" />
                </font>
@@ -128,11 +133,15 @@
             <Image url="@../../assets/BLUEMAGENTA.png" />
          </image>
       </ImageView>
-      <Text layoutX="516.0" layoutY="610.0" strokeType="OUTSIDE" strokeWidth="0.0">
+      <Text fx:id="nowPlaying" fill="WHITE" layoutX="504.0" layoutY="611.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="408.0">
          <font>
-            <Font name="Century Gothic" size="12.0" />
+            <Font name="Century Gothic" size="20.0" />
          </font>
       </Text>
+      <Button layoutX="1072.0" layoutY="136.0" mnemonicParsing="false" onAction="#playlistToQueue" style="-fx-background-color: transparent;" text="Add playlist to queue" textFill="BEIGE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
-
